--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -115,7 +115,7 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
 }
 
 .sub-nav {
-  z-index: calc(#{$zindex-header} - 1);
+  z-index: $zindex-header;
   height: $sub-nav-height;
 
   ~.content {
